<resources>
    <string name="app_name">AniTrack</string>
    <string name="nombre_de_usuario">Username</string>
    <string name="contrasena">Password</string>
    <string name="entrar">Login</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="log_out">Log Out</string>
    <string name="manga_list">Manga List</string>
    <string name="reading">Reading</string>
    <string name="completed">Completed</string>
    <string name="planning">Planning</string>
    <string name="dropped">Dropped</string>
    <string name="anime_list">Anime List</string>
    <string name="watching">Watching</string>
    <string name="cover">Cover</string>
    <string name="title">Title</string>
    <string name="media">Media</string>
    <string name="score">Score</string>
    <string name="plus1_ep">+1 EP</string>
    <string name="plus1_vo">+1 VO</string>
    <string name="powered">Powered by AniList</string>
    <string name="loading">Loading</string>
    <string name="banner">Banner</string>
    <string name="synopsis">Synopsis</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="genres">Genres</string>
    <string name="score_pop_favs">Score: 80 | Pop: 10000 | Favs: 500</string>
    <string name="format_status_source">TV | Finished | Manga</string>
    <string name="dates">Aired: 2019-04-01 to 2020-03-31</string>
    <string name="studios">Studios</string>
    <string name="characters">Characters</string>
    <string name="staff">Staff</string>
    <string name="relations">Relations</string>
    <string name="recommendations">Recommendations</string>
    <string name="external_links">External Links</string>
    <string name="character_image">Character Image</string>
    <string name="see_more_arrow">See more arrow</string>
    <string name="staff_image">Staff Image</string>
    <string name="openings">Openings:</string>
    <string name="endings">Endings:</string>
    <string name="link_icon">Link Icon</string>
    <string name="show_more">Show More</string>
    <string name="favorite_image">Favorite Image</string>
    <string name="trending_in_manga">Trending in Manga</string>
    <string name="trending_in_anime">Trending in Anime</string>
    <string name="background_image">Background Image</string>
    <string name="search">Search</string>
    <string name="year">Year</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="seasonal_anime">Seasonal Anime</string>
    <string name="special">SPECIAL</string>
    <string name="ona">ONA</string>
    <string name="ova">OVA</string>
    <string name="movie">MOVIE</string>
    <string name="tv_short">TV SHORT</string>
    <string name="tv">TV</string>
    <string name="seasonal_list">Seasonal List</string>

    <string name="previous_year">Previous Year</string>
    <string name="next_year">Next Year</string>
    <string name="show_filters">Show Filters</string>
    <string name="hide_filters">Hide Filters</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="settings">Settings</string>
    <string name="anilist_account">AniList Account\n</string>
    <string name="title_language">Title Language</string>
    <string name="show_adult_content">Show adult content</string>
    <string name="score_format">Score format</string>
    <string name="staff_name_language">Staff name language</string>
    <string name="airing_notifications">Airing notifications</string>
    <string name="save">SAVE</string>
    <string name="seiyuu_image">Seiyuu Image</string>
    <string name="language">Language</string>
    <string name="character_name">Character Name</string>
    <string name="set_as_favourite">Set as favourite</string>
    <string name="voice_actors">Voice Actors</string>
    <string name="media_appearances">Media appearances</string>
    <string name="tags">Tags:</string>
    <string name="status">Status</string>
    <string name="review">Review</string>
    <string name="favorite">Favorite</string>
    <string name="start_date">Start Date</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="end_date">End Date</string>
    <string name="set_end_date">Set End Date</string>
    <string name="rewatches">Rewatches</string>
    <string name="private_text">Private</string>
    <string name="hidden_from_status_list">Hidden from Status List</string>
    <string name="cancel">Cancel</string>
    <string name="config">Config</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bio">Bio</string>
    <string name="total_anime">Total Anime</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="days_watched">Days Watched</string>
    <string name="anime_mean_score">Anime Mean Score</string>
    <string name="total_manga">Total Manga</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="volumes_read">Volumes Read</string>
    <string name="manga_mean_score">Manga Mean Score</string>
    <string name="weekly_calendar">Weekly Calendar</string>
    <string name="characterimage">CharacterImage</string>
    <string name="mediaimage">MediaImage</string>
    <string name="show_my_list_only">Show My List Only</string>
    <string-array name="seasons_array">
        <item>WINTER</item>
        <item>SPRING</item>
        <item>SUMMER</item>
        <item>FALL</item>
    </string-array>

    <string-array name="sort_by_array">
        <item>FAVOURITES</item>
        <item>SCORE</item>
        <item>POPULARITY</item>
        <item>TRENDING</item>
    </string-array>

    <string-array name="sort_direction_array">
        <item>DESC</item>
        <item>ASC</item>
    </string-array>


</resources>