<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="150dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="21"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvIniciarSesion">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_usuario"
            android:maxLength="21" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="21"
        app:endIconMode="password_toggle"
        app:helperText="Required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tiLayoutUsuario"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:maxLength="21"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tiLayoutPassword"
         />
</androidx.constraintlayout.widget.ConstraintLayout>
