<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cover"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:ellipsize="end"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvYearRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textAppearance="?attr/textAppearanceCaption"
                android:ellipsize="end"
                />

            <LinearLayout
                android:id="@+id/layoutContainers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="25dp"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tvFavs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textStyle="bold"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_heart" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
